@@ -1837,6 +1837,9 @@ ipsec_tunnel_init(struct net_device *dev)
 	dev->addr_len		= 0;
 	dev->type		= ARPHRD_VOID; /* ARPHRD_TUNNEL; */ /* ARPHRD_ETHER; */
 	dev->tx_queue_len	= 10;		/* Small queue */
+#ifdef IFF_XMIT_DST_RELEASE
+	dev->priv_flags	       &= ~IFF_XMIT_DST_RELEASE;
+#endif
 	memset((caddr_t)(dev->broadcast),0xFF, ETH_ALEN);	/* what if this is not attached to ethernet? */
 
 	/* New-style flags. */
