@@ -31,6 +31,7 @@ v2.6.25
 * Fix oops on held packets [David]
 * Implement remove_orphaned_holds for NETKEY [Tuomo]
 * Fix _plutorun to use standard restart option for ipsec setup [Tuomo]
+* Disable auto skb_dst_release so that icmp_send works [Ronen Shitrit/David]
 
 v2.6.24
 * Give clear warning about missing defaultroute [Tuomo]
